--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <form id="movie-options">
             <div class="form-group">
               <label for="movie-selection">Movie Selection:</label>
-                <select name="showtimes" id="showtimes">
-                  <option value="old-movie" id="matinee-showing" name="showtimes">Matinee Showing</option>
-                  <option value="new-release" id="day-showing" name="showtimes">Day Showing</option>
+                <select name="movie-selection" id="movie-option">
+                  <option value="old-movie" id="old-movie" name="movie-selection">Old Movie</option>
+                  <option value="new-release" id="new-movie" name="movie-selection">New Movie</option>
                 </select>
             </div>
             <div class="form-group">
@@ -34,9 +34,10 @@
             </div>
             <div class="form-group">
               <label for="age-group">Age:</label>
-                <select name="showtimes" id="showtimes">
-                  <option value="matinee" id="matinee-showing" name="showtimes">Matinee Showing</option>
-                  <option value="day" id="day-showing" name="showtimes">Day Showing</option>
+                <select name="age-group" id="age-group">
+                  <option value="child" id="child-ticket" name="age-group">Child Ticket</option>
+                  <option value="adult" id="adult-ticket" name="age-group">Adult Ticket</option>
+                  <option value="senior" id="senior-ticket" name="age-group">Senior Ticket</option>
                 </select>
             </div>
             <button type="submit" class="btn-primary">Get Price</button>
