--- a/index.html
+++ b/index.html
@@ -1,64 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/scripts.js"></script>
-    <title>Ticket</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Movie Menu</h1>
-      <div class="row">
-        <div class="col-md-6">
-          <hr>
-          <h2>Movie Options:</h2>
-          <form id="movie-options">
-            <div class="form-group">
-              <label for="movie-selection">Movie Selection:</label>
-                <select name="movie-selection" id="movie-option">
-                  <option value="old-movie" id="old-movie" name="movie-selection">Old Movie</option>
-                  <option value="new-release" id="new-movie" name="movie-selection">New Movie</option>
-                </select>
-            </div>
-            <div class="form-group">
-              <label for="showtimes">Showtime:</label>
-                <select name="showtimes" id="showtimes">
-                  <option value="matinee" id="matinee-showing" name="showtimes">Matinee Showing</option>
-                  <option value="day" id="day-showing" name="showtimes">Day Showing</option>
-                </select>
-            </div>
-            <div class="form-group">
-              <label for="age-group">Age:</label>
-                <select name="age-group" id="age-group">
-                  <option value="child" id="child-ticket" name="age-group">Child Ticket</option>
-                  <option value="adult" id="adult-ticket" name="age-group">Adult Ticket</option>
-                  <option value="senior" id="senior-ticket" name="age-group">Senior Ticket</option>
-                </select>
-            </div>
-            <button type="submit" class="btn-primary">Get Price</button>
-          </form>
-          <hr>
-          <h2>Price:</h2>
-          <div id="ticket-price">
+<head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/scripts.js"></script>
+  <title>Ticket</title>
+</head>
+<body>
+  <div class="container">
+    <h1 id="title">Movie Menu</h1>
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <hr>
+        <h2>Movie Options:</h2>
+        <form id="movie-options">
+          <div class="form-group">
+            <label for="movie-selection">Movie Selection:</label>
+              <select name="movie-selection" id="movie-option">
+                <option value="old-movie" id="rush" name="movie-selection">Rush</option>
+                <option value="old-movie" id="tenet" name="movie-selection">Tenet</option>
+                <option value="new-release" id="john-wick-4" name="movie-selection">John Wick: Chapter 4</option>
+                <option value="new-release" id="the-menu" name="movie-selection">The Menu</option>
+              </select>
           </div>
+          <div class="form-group">
+            <label for="showtimes">Showtime:</label>
+              <select name="showtimes" id="showtimes">
+                <option value="matinee" id="matinee-showing" name="showtimes">Matinee Showing</option>
+                <option value="day" id="day-showing" name="showtimes">Day Showing</option>
+              </select>
+          </div>
+          <div class="form-group">
+            <label for="age-group">Age:</label>
+              <select name="age-group" id="age-group">
+                <option value="child" id="child-ticket" name="age-group">Child Ticket</option>
+                <option value="adult" id="adult-ticket" name="age-group">Adult Ticket</option>
+                <option value="senior" id="senior-ticket" name="age-group">Senior Ticket</option>
+              </select>
+          </div>
+          <button type="submit" class="btn-primary">Get Price</button>
+        </form>
+        <hr>
+        <h2>Ticket Price:</h2>
+        <div id="ticket-price">
         </div>
-        <!-- <div class="col-md-6">
-          <div id="contact-details" class="hidden">
-            <h2>Contact Details:</h2>
-            <p>First Name: <span class="first-name"></span></p>
-            <p>Last Name: <span class="last-name"></span></p>
-            <p>Phone Number: <span class="phone-number"></span></p>
-            <p>Email Address: <span class="email-address"></span></p>
-            <p>Mailing Address: <span class="mailing-address"></span></p>
-            <button class="btn-primary delete" type="button">Delete</button>
-          </div>
-        </div> -->       
+        <h2>Movie Poster:</h2>
+        <div id="movie-poster"></div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
 </html>
