--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <div class="form-group">
             <label for="movie-selection">Movie Selection:</label>
               <select name="movie-selection" id="movie-option">
-                <option value="old-movie" id="rush" name="movie-selection">Rush</option>
-                <option value="old-movie" id="tenet" name="movie-selection">Tenet</option>
-                <option value="new-release" id="john-wick-4" name="movie-selection">John Wick: Chapter 4</option>
-                <option value="new-release" id="the-menu" name="movie-selection">The Menu</option>
+                <option value="rush" id="rush" name="movie-selection">Rush</option>
+                <option value="tenet" id="tenet" name="movie-selection">Tenet</option>
+                <option value="john-wick-4" id="john-wick-4" name="movie-selection">John Wick: Chapter 4</option>
+                <option value="the-menu" id="the-menu" name="movie-selection">The Menu</option>
               </select>
           </div>
           <div class="form-group">
@@ -45,7 +45,7 @@
         <div id="ticket-price">
         </div>
         <h2>Movie Poster:</h2>
-        <div id="movie-poster"></div>
+        <img id="poster-image">
       </div>
     </div>
   </div>
